terraform/internet_gateway.tf
############################################
# Internet Gateway
############################################

resource "aws_internet_gateway" "igw" {

  vpc_id = aws_vpc.nginx_vpc.id

  tags = {
    Name = "Nginx-IGW"
  }
}
